--- a/web/src/pages/items/items.component.html
+++ b/web/src/pages/items/items.component.html
@@ -1,3 +1,4 @@
+
 <div style="margin-top:90px;margin-left:310px;background-color:#fffff0;height:400px;width:900px">
-    In main page
+    <p>items works!</p>
 </div>
