--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,49 +1,24 @@
-<div *ngIf="!loginSerice.isLoggedIn()">
+<div *ngIf="!loginService.isLoggedIn()">
     <router-outlet></router-outlet>
 </div>
 
 
-<div class="layout-wrapper" *ngIf="loginSerice.isLoggedIn()">
+<div class="layout-wrapper">
     <div id="layout-topbar">
-        <a href="#" class="menu-button" (click)="onMenuButtonClick($event)">
-            <i class="fa fa-bars"></i>
-        </a>
         <div>
             <img src="../assets/schoollogo.jpg" alt="LOGO" height="50px;" width="100px;" style="padding: 5px;" />
-            <h1 class="logo">Welcome to CBS School</h1>
-            
+            <h1 class="logo">Welcome to Inventory Management</h1>
         </div>
-        
     </div>
-    <div>
-        <div id="layout-sidebar" [ngClass]="{'active': menuActive}">
-            <div class="layout-menu">
-                <a id="menu_input" #inputmenutitle [class.active-menuitem]="inputmenutitle.id == activeMenuId" (click)="activeMenuId = (activeMenuId === inputmenutitle.id ? null : inputmenutitle.id)">
-                    <span>Administration</span>
-                </a>
-                <div [ngClass]="{submenushow: (inputmenutitle.id == activeMenuId), 'submenuhide': (inputmenutitle.id != activeMenuId)}">
-                    <a [routerLink]="['/classes']" (click)="menuActive = false">&#9679; Classes</a>
-                    <a [routerLink]="['/subjects']" (click)="menuActive = false">&#9679; Subjects</a>
-                    <a [routerLink]="['/students']" (click)="menuActive = false">&#9679; Students</a>
-                    <a [routerLink]="['/staffs']" (click)="menuActive = false">&#9679; Staffs</a>
-                    <a [routerLink]="['/substaffmapping']" (click)="menuActive = false">&#9679; Subject Staffs Mapping</a>
-                </div>
 
-                <a id="button_menutitle" #buttonmenutitle [class.active-menuitem]="buttonmenutitle.id == activeMenuId" (click)="activeMenuId = (activeMenuId === buttonmenutitle.id ? null : buttonmenutitle.id)">
-                    <span>Attendance</span>
-                </a>
-                <div [ngClass]="{submenushow: (buttonmenutitle.id == activeMenuId), 'submenuhide': (buttonmenutitle.id != activeMenuId)}">
-                    <a [routerLink]="['/attendance']" (click)="menuActive = false">&#9679; Attendance</a>
-                </div>
-                <a id="data_menutitle" #datamenutitle [class.active-menuitem]="datamenutitle.id == activeMenuId" (click)="activeMenuId = (activeMenuId === datamenutitle.id ? null : datamenutitle.id)">
-                    <span>Messaging System</span>
-                </a>
+    <div>
+        <div id="layout-sidebar">
+            <div class="layout-menu">
+                <a routerLink="/main-page" routerLinkActive="active-link">Main Page</a>
+                <a routerLink="/app-items" routerLinkActive="active-link">Items</a>
+                <a routerLink="/app-items" routerLinkActive="active-link">Vendors</a>
             </div>
         </div>
-    </div>
-
-
-    <div class="layout-mask" *ngIf="menuActive">
     </div>
 
     <div id="layout-content">
