adding item component

--- a/web/src/pages/items/items.component.html
+++ b/web/src/pages/items/items.component.html
@@ -1,4 +1,82 @@
+<p-toast></p-toast>
 
-<div style="margin-top:90px;margin-left:310px;background-color:#fffff0;height:400px;width:900px">
-    <p>items works!</p>
-</div>
+    <div class="card">
+        <p-toolbar styleClass="p-mb-4">
+            <ng-template pTemplate="left">
+                <button pButton pRipple label="New" icon="pi pi-plus" class="p-button-success p-mr-2" (click)="openNew()"></button>
+                <button pButton pRipple [label]="Delete" icon="pi pi-trash" class="p-button-danger" (click)="deleteSelectedProducts()" [disabled]="!selectedProducts || !selectedProducts.length"></button>
+            </ng-template>
+
+            <ng-template pTemplate="right">
+                <p-fileUpload mode="basic" accept="image/*" [maxFileSize]="1000000" label="Import" chooseLabel="Import" class="p-mr-2 p-d-inline-block"></p-fileUpload>
+                <button pButton pRipple label="Export" icon="pi pi-upload" class="p-button-help"></button>
+            </ng-template>
+        </p-toolbar>
+
+        <p-table #dt [value]="items" [rows]="10" [paginator]="true" [globalFilterFields]="['itemName','itemDescription']" responsiveLayout="scroll"
+                 [(selection)]="selectedItems" [rowHover]="true" dataKey="itemId"
+                 currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
+            <ng-template pTemplate="caption">
+                <div class="p-d-flex p-ai-center p-jc-between">
+                    <h5 class="p-m-0">Manage Items</h5>
+                    <span class="p-input-icon-left">
+                    <i class="pi pi-search"></i>
+                    <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Search..." />
+                </span>
+                </div>
+            </ng-template>
+            <ng-template pTemplate="header">
+                <tr>
+                    <th style="width: 3rem">
+                        <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                    </th>
+                    <th pSortableColumn="itemName">Name <p-sortIcon field="itemName"></p-sortIcon></th>
+                    <th pSortableColumn="itemDescription">Description <p-sortIcon field="itemDescription"></p-sortIcon></th>
+                    <th></th>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-item>
+                <tr>
+                    <td>
+                        <p-tableCheckbox [value]="item"></p-tableCheckbox>
+                    </td>
+                    <td>{{item.itemName}}</td>
+                    <td>{{item.itemDescription}}</td>
+                    <td>
+                        <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-mr-2" (click)="editProduct(product)"></button>
+                        <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning" (click)="deleteProduct(product)"></button>
+                    </td>
+                </tr>
+            </ng-template>
+            <ng-template pTemplate="summary">
+                <div class="p-d-flex p-ai-center p-jc-between">
+                    In total there are {{Items ? Items.length : 0 }} products.
+                </div>
+            </ng-template>
+        </p-table>
+    </div>
+
+    <p-dialog [(visible)]="itemDialog" [style]="{width: '450px'}" header="Item Details" [modal]="true" styleClass="p-fluid">
+        <ng-template pTemplate="content">
+            <img [src]="'assets/showcase/images/demo/product/' + product.image" [alt]="item.image" class="product-image" *ngIf="product.image">
+            <div class="p-field">
+                <label for="name">Name</label>
+                <input type="text" pInputText id="name" [(ngModel)]="item.itemName" required autofocus />
+                <small class="p-error" *ngIf="submitted && !item.itemName">Name is required.</small>
+            </div>
+            <div class="p-field">
+                <label for="description">Description</label>
+                <textarea id="description" pInputTextarea [(ngModel)]="item.itemDescription" required rows="3" cols="20"></textarea>
+            </div>
+
+        </ng-template>
+
+        <ng-template pTemplate="footer">
+            <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
+            <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text" (click)="saveItem()"></button>
+        </ng-template>
+    </p-dialog>
+
+    <p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
+
+
